Puede que funcione Azure

--- a/.github/package.json
+++ b/.github/package.json
@@ -42,5 +42,6 @@
   },
   "devDependencies": {
     "gh-pages": "^6.2.0"
-  }
+  },
+  "repository": "https://github.com/ChrisMtz505/Spin-RecordsAdminCaliz.git"
 }
